modification de map fonctionnelle

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "plateau.h": "c",
     "stdio.h": "c",
-    "createur_map.h": "c"
+    "createur_map.h": "c",
+    "ressources.h": "c"
   }
 }
